.provarCaches/00D410000011HE0EAM/objects/rstk__ictransreqh__c.object
<CustomObject>
    <description>ictransreqh__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__ictransreqh_div__r.rstk__sydiv_div__c + rstk__ictransreqh_group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__ictransreqh_div__r.rstk__sydiv_div__c + &quot;-&quot; + rstk__ictransreqh_group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_numgroup__c</fullName>
        <formula>IF( ISNUMBER( rstk__ictransreqh_group__c ),  VALUE(rstk__ictransreqh_group__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Group No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Planned Location Transfer Groups</relationshipLabel>
        <relationshipName>ictransreqhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_group__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Packing Slip (Group) Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_isocountry__c</fullName>
        <description>ictransreqh_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_picklistgen__c</fullName>
        <description>This field records the date and time of the last picklist detail generation performed for this Planned Transfer Group.</description>
        <inlineHelpText>This field records the date and time of the last picklist detail generation performed for this Planned Transfer Group.</inlineHelpText>
        <label>Date of Picklist Detail Generation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_regenpicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field drives the creation of Picklist details for all Planned Transfers in this Group.  When checked and saved, it is cleared as part of the detail generation process. The Picklist Generation date field remains as an audit of the processing.</description>
        <inlineHelpText>This field drives the creation of Picklist details for all Planned Transfers in this Group.  When checked and saved, it is cleared as part of the detail generation process. The Picklist Generation date field remains as an audit of the processing.</inlineHelpText>
        <label>Generate Picklist Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptocity__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptocountry__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptoname__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptostate__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptostreet__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_shiptozip__c</fullName>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Ship-To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqh_tosite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicble</inlineHelpText>
        <label>Destination Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Planned Location Transfer Groups</relationshipLabel>
        <relationshipName>ictransreqhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Planned Location Transfer Group</label>
    <listViews>
        <fullName>rstk__RS_Planned_Location_Transfer_Groups</fullName>
        <columns>NAME</columns>
        <columns>rstk__ictransreqh_div__c</columns>
        <columns>rstk__ictransreqh_tosite__c</columns>
        <columns>rstk__ictransreqh_group__c</columns>
        <columns>rstk__ictransreqh_shiptoname__c</columns>
        <columns>rstk__ictransreqh_shiptostreet__c</columns>
        <columns>rstk__ictransreqh_shiptocity__c</columns>
        <columns>rstk__ictransreqh_shiptostate__c</columns>
        <columns>rstk__ictransreqh_shiptozip__c</columns>
        <columns>rstk__ictransreqh_shiptocountry__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Planned Location Transfer Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Location Transfer Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>